--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Exo', sans-serif;
 }
+h1 {
+    margin: 35px 0;
+}
 body {
     text-align: center;
     padding: 30px;
